[tool.poetry]
name = "pysnow"
version = "0.7.17"
description = "ServiceNow HTTP client library"
authors = ["Robert Wikman <rbw@vault13.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rbw/pysnow"

[tool.poetry.dependencies]
python = ">=3.11.*, <4"
requests = "^2.32.3"
oauthlib = "^3.2.2"
python-magic = "^0.4.27"
requests-oauthlib = "^2.0.0"
six = "^1.17.0"
ijson = "^3.3.0"
pytz = "^2024.2"

[tool.poetry.dev-dependencies]
twine = "^6.0.1"
sphinx = "^8.1.3"
nose = "^1.3.7"
httpretty = "^1.1.4"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"